--- a/README.org
+++ b/README.org
@@ -1,9 +1,11 @@
 #+title: SICP Solutions
 
+This repository contains my solutions to Structure and Interpretation of Computer Programs, this is an ongoing effort.  I've used org-mode so the code blocks can be executed directly from the org file and the sections can be exported as html or latex.
+
 + [[file:section-1-1.org][Section 1.1]]
 + [[file:section-1-1-newtons-method.org][Example: Square Roots by Newton's Method]]
 + [[file:section-1-2.org][Section 1.2]]
-+ [[file:section-1-2.org][Example: Testing for Primality]]
++ [[file:section-1-2-testing-primality.org][Example: Testing for Primality]]
 + [[file:section-1-3.org][Section 1.3]]
 + [[file:section-2-1.org][Section 2.1]]
 + [[file:section-2-1-interval-arithmetic.org][Extended Exercise: Interval Arithmetic]]
@@ -18,3 +20,5 @@
 + [[file:section-3-1.org][Section 3.1]]
 + [[file:section-3-2.org][Section 3.2]]
 + [[file:section-3-3.org][Section 3.3]]
++ [[file:section-3-4.org][Section 3.4]]
++ [[file:section-3-5.org][Section 3.5]]
