--- a/section-3-5.org
+++ b/section-3-5.org
@@ -141,12 +141,389 @@ Define a procedure partial-sums that takes as argument a stream $S$ and returns 
   (stream-map + s1 s2))
 
 ;; actual solution
-(define (partial-sum s)
+(define (partial-sums s)
   (cons-stream
    (stream-car s)
-   (add-streams (stream-cdr s) (partial-sum s))))
+   (add-streams (stream-cdr s) (partial-sums s))))
 
 (test-equal
     '(1 3 6 10 15)
-  (stream-take (partial-sum integers) 5))
+  (stream-take (partial-sums integers) 5))
+#+end_src
+
+* Exercise 3.56
+A famous problem, first raised by R. Hamming, is to enumerate, in ascending order with no repetitions, all positive integers with no prime factors other than 2, 3, or 5.  One obvious way to do this is to simply test each integer in turn to see whether it has any factors other than 2, 3, and 5.  But this is very inefficient, since, as the integers get larger, fewer and fewer of them fit the requirement.  As an alternative, let us call the required stream of numbers S and notice the following facts about it.
+
++ S begins with 1.
+
++ The elements of (scale-stream S 2) are also elements of S.
+
++ The same is true for (scale-stream S 3) and (scale-stream S 5).
+
++ These are all the elements of S.
+
+Now all we have to do is combine elements from these sources.  For this we define a procedure merge that combines two ordered streams into one ordered result stream, eliminating repetitions:
+
+#+begin_src scheme :eval never
+(define (merge s1 s2)
+  (cond ((stream-null? s1) s2)
+        ((stream-null? s2) s1)
+        (else
+         (let ((s1car (stream-car s1))
+               (s2car (stream-car s2)))
+           (cond ((< s1car s2car)
+                  (cons-stream
+                   s1car
+                   (merge (stream-cdr s1)
+                          s2)))
+                 ((> s1car s2car)
+                  (cons-stream
+                   s2car
+                   (merge s1
+                          (stream-cdr s2))))
+                 (else
+                  (cons-stream
+                   s1car
+                   (merge
+                    (stream-cdr s1)
+                    (stream-cdr s2)))))))))
+#+end_src
+
+Then the required stream may be constructed with merge, as follows:
+
+#+begin_src scheme :eval never
+(define S (cons-stream 1 (merge <??> <??>)))
+#+end_src
+
+Fill in the missing expressions in the places marked <??> above.
+
+** Solution
+#+begin_src scheme
+(define S (cons-stream 1 (merge (scale-stream S 2)
+                                (merge (scale-stream S 3)
+                                       (scale-stream S 5)))))
+#+end_src
+
+* Exercise 3.57
+How many additions are performed when we compute the $n^{th}$ Fibonacci number using the definition of fibs based on the add-streams procedure?  Show that the number of additions would be exponentially greater if we had implemented (delay <exp>) simply as (lambda () <exp>), without using the optimization provided by the memo-proc procedure described in 3.5.1.
+
+** Solution
+The number of sums to compute the $n^{th}$ Fibonacci number is $n-2$, since the first two numbers are given and memoization prevents any element of the sequence from being calculated more than once.
+
+*** TODO show that the number of additions would be exponential without memoization.
+
+* Exercise 3.58
+Give an interpretation of the stream computed by the following procedure:
+
+#+begin_src scheme :eval never
+(define (expand num den radix)
+  (cons-stream
+   (quotient (* num radix) den)
+   (expand (remainder (* num radix) den)
+           den
+           radix)))
+#+end_src
+
+(Quotient is a primitive that returns the integer quotient of two integers.)  What are the successive elements produced by (expand 1 7 10)?  What is produced by (expand 3 8 10)?
+
+** Solution
+The expand procedure returns a stream with the resulting digits of the division of num by den at base radix.  If s is the resulting sequence of expand for any num, den and radix; (quotient (stream-car s) radix) is the integral part of the result, (remainder (stream-car s) radix) is the first fractional digit and the subsequent elements of s are the rest of the fractional digits.
+
++ (expand 1 7 10) will produce the sequence $1, 4, 2, 8, 5, 7, 1, 4, 2, 8, 5, 7, 1, 4, \cdots$ which corresponds to $1/7 = 0.\overline{142857}$.
+
++ (expand 3 8 10) will produce the sequence $3, 7, 5, 0, 0, 0, 0, \cdots$ which corresponds to $3/8 = 0.375$.
+
+
+* TODO Exercise 3.59
+In 2.5.3 we saw how to implement a polynomial arithmetic system representing polynomials as lists of terms.  In a similar way, we can work with  power series, such as
+
+\begin{align*}
+e^x &= 1 + x + \frac{1}{2}x^2 + \frac{1}{3 \cdot 2}x^3 + \frac{1}{4 \cdot 3 \cdot 2}x^4 + \cdots, \\
+\cos x &= 1 − \frac{1}{2}x^2 + \frac{1}{4 \cdot 3 \cdot 2}x^4 − \cdots, \\
+\sin x &= x − \frac{1}{3 \cdot 2}x^3 + \frac{1}{5 \cdot 4 \cdot 3 \cdot 2}x^5 − \cdots
+\end{align*}
+
+represented as infinite streams.  We will represent the series $a_0 + a_1x + a_2x^2 + a_3x^3 + \cdots$ as the stream whose elements are the coefficients $a_0, a_1, a_2, a_3, \cdots$.
+
+1. The integral of the series $a_0 + a_1x + a_2x^2 + a_3x^3 + \cdots$ is the series
+
+   \begin{equation*}
+   c + a_0x + \frac{1}{2}a_1x^2 + \frac{1}{3}a_2x^3 + \frac{1}{4}a_3x^4
+       + \cdots,
+   \end{equation*}
+
+   where $c$ is any constant.  Define a procedure integrate-series that takes as input a stream $a_0, a_1, a_2, \cdots$ representing a power series and returns the stream $a_0, \frac{1}{2}a_1, \frac{1}{3}a_2, \cdots$ of coefficients of the non-constant terms of the integral of the series.  (Since the result has no constant term, it doesn't represent a power series; when we use integrate-series, we will cons on the appropriate constant.)
+
+2. The function $x \mapsto e^x$ is its own derivative.  This implies that $e^x$ and the integral of $e^x$ are the same series, except for the constant term, which is $e^0 = 1$.  Accordingly, we can generate the series for $e^x$ as
+
+   #+begin_src scheme :eval never
+   (define exp-series
+     (cons-stream
+      1 (integrate-series exp-series)))
+   #+end_src
+
+   Show how to generate the series for sine and cosine, starting from the facts that the derivative of sine is cosine and the derivative of cosine is the negative of sine:
+
+   #+begin_src scheme :eval never
+   (define cosine-series
+     (cons-stream 1 <??>))
+
+   (define sine-series
+     (cons-stream 0 <??>))
+   #+end_src
+
+
+* TODO Exercise 3.60
+With power series represented as streams of coefficients as in Exercise 3.59, adding series is implemented by add-streams.  Complete the definition of the following procedure for multiplying series:
+
+#+begin_src scheme :eval never
+(define (mul-series s1 s2)
+  (cons-stream <??> (add-streams <??> <??>)))
+#+end_src
+
+You can test your procedure by verifying that $\sin 2⁡ x + \cos 2⁡ x = 1$, using the series from Exercise 3.59.
+
+
+* TODO Exercise 3.61
+Let $S$ be a power series (Exercise 3.59) whose constant term is 1.  Suppose we want to find the power series $1/S$, that is, the series $X$ such that $SX = 1$. Write $S = 1 + S_R$ where $S_R$ is the part of $S$ after the constant term.  Then we can solve for $X$ as follows:
+
+\begin{align*}
+S ⋅ X &= 1, \\
+(1 + S_R) \cdot X &= 1, \\
+X + S_R \cdot X &= 1, \\
+X &= 1 − S_R \cdot X.
+\end{align*}
+
+In other words, $X$ is the power series whose constant term is 1 and whose higher-order terms are given by the negative of $S_R$ times $X$.  Use this idea to write a procedure invert-unit-series that computes $1/S$ for a power series $S$ with constant term 1.  You will need to use mul-series from Exercise 3.60.
+
+
+* TODO Exercise 3.62
+Use the results of Exercise 3.60 and Exercise 3.61 to define a procedure div-series that divides two power series.  Div-series should work for any two series, provided that the denominator series begins with a nonzero constant term.  (If the denominator has a zero constant term, then div-series should signal an error.)  Show how to use div-series together with the result of Exercise 3.59 to generate the power series for tangent.
+
+* Exercise 3.63
+Louis Reasoner asks why the sqrt-stream procedure was not written in the following more straightforward way, without the local variable guesses:
+
+#+begin_src scheme :eval never
+(define (sqrt-stream x)
+  (cons-stream
+   1.0
+   (stream-map (lambda (guess)
+                 (sqrt-improve guess x))
+               (sqrt-stream x))))
+#+end_src
+
+Alyssa P. Hacker replies that this version of the procedure is considerably less efficient because it performs redundant computation.  Explain Alyssa’s answer.  Would the two versions still differ in efficiency if our implementation of delay used only (lambda () <exp>) without using the optimization provided by memo-proc (3.5.1)?
+
+** Solution
+The solution proposed by Louis Reasoner creates new stream object when the evaluation of stream-cdr happens.  This new stream cannot benefit from the memoization of the original stream.  Now, to get nth element of the streams is necessary to evaluate stream-cdr n-1 times, that means evaluating improve-guess (n-1)*(n-1) time, or O(n^2).
+
+Without memoization there would be no difference in efficiency since to get the nth element the previous n-1 would be computed again, and the same for each of the previous elements, yielding O(n^2) again.
+
+
+* Exercise 3.64
+Write a procedure stream-limit that takes as arguments a stream and a number (the tolerance).  It should examine the stream until it finds two successive elements that differ in absolute value by less than the tolerance, and return the second of the two elements.  Using this, we could compute square roots up to a given tolerance by
+
+#+begin_src scheme :eval never
+(define (sqrt x tolerance)
+  (stream-limit (sqrt-stream x) tolerance))
+#+end_src
+
+** Solution
+#+begin_src scheme
+(define (stream-limit s tolerance)
+  (let ((current (stream-car s))
+        (next (stream-car (stream-cdr s))))
+    (if (> tolerance
+           (abs (- current next)))
+           next
+           (stream-limit (stream-cdr s) tolerance))))
+
+;;; definitions
+(define sqrt-improve
+  (lambda (guess x)
+    (average guess (/ x guess))))
+
+(define (sqrt-stream x)
+  (define guesses
+     (cons-stream
+      1.0
+      (stream-map (lambda (guess)
+                    (sqrt-improve guess x))
+                  guesses)))
+  guesses)
+
+(define (sqrt x tolerance)
+  (stream-limit (sqrt-stream x) tolerance))
+
+(test-approximate 1.4142 (sqrt 2 0.0001) 0.0001)
+#+end_src
+
+
+* Exercise 3.65
+Use the series
+
+\begin{equation*}
+\ln 2 = 1 − \frac{1}{2} + \frac{1}{3} − \frac{1}{4} + \cdots
+\end{equation*}
+
+to compute three sequences of approximations to the natural logarithm of 2, in the same way we did above for $\pi$.  How rapidly do these sequences converge?
+
+** Solution
+#+begin_src scheme
+(define (add-streams s1 s2)
+  (stream-map + s1 s2))
+
+(define (partial-sums s)
+  (cons-stream
+   (stream-car s)
+   (add-streams (stream-cdr s) (partial-sums s))))
+
+(define (ln2-summands n)
+  (cons-stream
+   (/ 1.0 n)
+   (stream-map - (ln2-summands (+ n 1)))))
+
+(define ln2-stream
+  (partial-sums (ln2-summands 1)))
+
+(define (euler-transform s)
+  (let ((s0 (stream-ref s 0))
+        (s1 (stream-ref s 1))
+        (s2 (stream-ref s 2)))
+    (cons-stream
+     (- s2 (/ (square (- s2 s1))
+              (+ s0 (* -2 s1) s2)))
+     (euler-transform (stream-cdr s)))))
+
+(use-modules (ice-9 format))
+(map (lambda (a0 b0 c0)
+       (format #t "| ~11,9f | ~11,9f | ~11,9f |~%" a0 b0 c0))
+     (stream-take ln2-stream 10)
+     (stream-take (euler-transform ln2-stream) 10)
+     (stream-take (euler-transform (euler-transform ln2-stream)) 10))
+#+end_src
+
+Approximation of $\ln 2$ to 9 decimals: 0,693147181
+
+#+RESULTS:
+| 1.000000000 | 0.700000000 | 0.693277311 |
+| 0.500000000 | 0.690476190 | 0.693105756 |
+| 0.833333333 | 0.694444444 | 0.693163341 |
+| 0.583333333 | 0.692424242 | 0.693139901 |
+| 0.783333333 | 0.693589744 | 0.693150829 |
+| 0.616666667 | 0.692857143 | 0.693145196 |
+| 0.759523810 | 0.693347339 | 0.693148332 |
+| 0.634523810 | 0.693003342 | 0.693146476 |
+| 0.745634921 | 0.693253968 | 0.693147631 |
+| 0.645634921 | 0.693065751 | 0.693146882 |
+
+
+* Exercise 3.66
+Examine the stream (pairs integers integers). Can you make any general comments about the order in which the pairs are placed into the stream? For example, approximately how many pairs precede the pair (1, 100)? the pair (99, 100)? the pair (100, 100)? (If you can make precise mathematical statements here, all the better. But feel free to give more qualitative answers if you find yourself getting bogged down.)
+
+** Solution
+Let f(m, n) be the function that maps the pair (m, n) to the corresponding index the pair in the described sequence. Then we have:
+
+f(1, 1) = 1
+f(1, n) = 2*(n - 1)
+f(m, n) = 2*f(m-1, n-1) + 1
+
+*** TODO finish
+
+
+* Exercise 3.67
+Modify the pairs procedure so that (pairs integers integers) will produce the stream of all pairs of integers $(i, j)$ (without the condition $i ≤ j$).  Hint: You will need to mix in an additional stream.
+
+** Solution
+#+begin_src scheme
+(define (full-pairs s t)
+  (cons-stream
+   (list (stream-car s) (stream-car t))
+   (interleave
+    (interleave
+     (stream-map (lambda (x)
+                   (list (stream-car s) x))
+                 (stream-cdr t))
+     (stream-map (lambda (x)
+                   (list x (stream-car t)))
+                 (stream-cdr s)))
+    (full-pairs (stream-cdr s) (stream-cdr t)))))
+#+end_src
+
+
+* Exercise 3.68
+Louis Reasoner thinks that building a stream of pairs from three parts is unnecessarily complicated. Instead of separating the pair $(S_0, T_0)$ from the rest of the pairs in the first row, he proposes to work with the whole first row, as follows:
+
+#+begin_src scheme :eval never
+(define (pairs s t)
+  (interleave
+   (stream-map
+    (lambda (x)
+      (list (stream-car s) x))
+    t)
+   (pairs (stream-cdr s)
+          (stream-cdr t))))
+#+end_src
+
+Does this work?  Consider what happens if we evaluate (pairs integers integers) using Louis’s definition of pairs.
+
+
+** Solution
+This would produce an infinite loop since pairs is defined in terms if itself but there are no delayed evaluation.
+
+
+* Exercise 3.69
+Write a procedure triples that takes three infinite streams, $S$, $T$, and $U$, and produces the stream of triples $(S_i, T_j, U_k)$ such that $i \leq j \leq k$.  Use triples to generate the stream of all Pythagorean triples of positive integers, i.e., the triples $(i, j, k)$ such that $i \leq j$ and $i^2 + j^2 = k^2$.
+
+** Solution
+#+begin_src scheme
+;; previous definitions
+(define ones (cons-stream 1 ones))
+
+(define (add-streams s1 s2)
+  (stream-map + s1 s2))
+
+(define integers (cons-stream 1 (add-streams ones integers)))
+
+(define (interleave s1 s2)
+  (if (stream-null? s1)
+      s2
+      (cons-stream
+       (stream-car s1)
+       (interleave s2 (stream-cdr s1)))))
+
+(define (pairs s t)
+  (cons-stream
+   (list (stream-car s) (stream-car t))
+   (interleave
+    (stream-map (lambda (x)
+                  (list (stream-car s) x))
+                (stream-cdr t))
+    (pairs (stream-cdr s) (stream-cdr t)))))
+
+;; actual solution
+(define (triplets s t u)
+  (cons-stream
+   (list (stream-car s) (stream-car t) (stream-car u))
+   (interleave
+    (interleave
+     (stream-map (lambda (pair) (cons (stream-car s) pair))
+                 (stream-map (lambda (x) (list (stream-car t) x))
+                             (stream-cdr u)))
+     (stream-map (lambda (pair) (cons (stream-car s) pair))
+                 (pairs (stream-cdr t) (stream-cdr u))))
+    (triplets (stream-cdr s) (stream-cdr t) (stream-cdr u)))))
+
+
+(define pythagorean-triplets
+  (stream-filter (lambda (triplet)
+                   (let ((a (car   triplet))
+                         (b (cadr  triplet))
+                         (c (caddr triplet)))
+                     (= (+ (* a a) (* b b)) (* c c))))
+   (triplets integers integers integers)))
+
+(test-equal
+    '((3 4 5) (6 8 10) (5 12 13) (9 12 15) (8 15 17))
+  (stream-take pythagorean-triplets 5))
 #+end_src
