--- a/section-3-5.org
+++ b/section-3-5.org
@@ -148,7 +148,7 @@ Define a procedure partial-sums that takes as argument a stream $S$ and returns 
 
 (test-equal
     '(1 3 6 10 15)
-  (stream-take (partial-sums integers) 5))
+  (stream-take 5 (partial-sums integers)))
 #+end_src
 
 * Exercise 3.56
@@ -239,8 +239,8 @@ In 2.5.3 we saw how to implement a polynomial arithmetic system representing pol
 
 \begin{align*}
 e^x &= 1 + x + \frac{1}{2}x^2 + \frac{1}{3 \cdot 2}x^3 + \frac{1}{4 \cdot 3 \cdot 2}x^4 + \cdots, \\
-\cos x &= 1 − \frac{1}{2}x^2 + \frac{1}{4 \cdot 3 \cdot 2}x^4 − \cdots, \\
-\sin x &= x − \frac{1}{3 \cdot 2}x^3 + \frac{1}{5 \cdot 4 \cdot 3 \cdot 2}x^5 − \cdots
+\cos x &= 1 - \frac{1}{2}x^2 + \frac{1}{4 \cdot 3 \cdot 2}x^4 - \cdots, \\
+\sin x &= x - \frac{1}{3 \cdot 2}x^3 + \frac{1}{5 \cdot 4 \cdot 3 \cdot 2}x^5 - \cdots
 \end{align*}
 
 represented as infinite streams.  We will represent the series $a_0 + a_1x + a_2x^2 + a_3x^3 + \cdots$ as the stream whose elements are the coefficients $a_0, a_1, a_2, a_3, \cdots$.
@@ -281,17 +281,17 @@ With power series represented as streams of coefficients as in Exercise 3.59, ad
   (cons-stream <??> (add-streams <??> <??>)))
 #+end_src
 
-You can test your procedure by verifying that $\sin 2⁡ x + \cos 2⁡ x = 1$, using the series from Exercise 3.59.
+You can test your procedure by verifying that $\sin^2 x + \cos^2 x = 1$, using the series from Exercise 3.59.
 
 
 * TODO Exercise 3.61
 Let $S$ be a power series (Exercise 3.59) whose constant term is 1.  Suppose we want to find the power series $1/S$, that is, the series $X$ such that $SX = 1$. Write $S = 1 + S_R$ where $S_R$ is the part of $S$ after the constant term.  Then we can solve for $X$ as follows:
 
 \begin{align*}
-S ⋅ X &= 1, \\
+S \cdot X &= 1, \\
 (1 + S_R) \cdot X &= 1, \\
 X + S_R \cdot X &= 1, \\
-X &= 1 − S_R \cdot X.
+X &= 1 - S_R \cdot X.
 \end{align*}
 
 In other words, $X$ is the power series whose constant term is 1 and whose higher-order terms are given by the negative of $S_R$ times $X$.  Use this idea to write a procedure invert-unit-series that computes $1/S$ for a power series $S$ with constant term 1.  You will need to use mul-series from Exercise 3.60.
@@ -363,7 +363,7 @@ Write a procedure stream-limit that takes as arguments a stream and a number (th
 Use the series
 
 \begin{equation*}
-\ln 2 = 1 − \frac{1}{2} + \frac{1}{3} − \frac{1}{4} + \cdots
+\ln 2 = 1 - \frac{1}{2} + \frac{1}{3} - \frac{1}{4} + \cdots
 \end{equation*}
 
 to compute three sequences of approximations to the natural logarithm of 2, in the same way we did above for $\pi$.  How rapidly do these sequences converge?
@@ -398,12 +398,12 @@ to compute three sequences of approximations to the natural logarithm of 2, in t
 (use-modules (ice-9 format))
 (map (lambda (a0 b0 c0)
        (format #t "| ~11,9f | ~11,9f | ~11,9f |~%" a0 b0 c0))
-     (stream-take ln2-stream 10)
-     (stream-take (euler-transform ln2-stream) 10)
-     (stream-take (euler-transform (euler-transform ln2-stream)) 10))
+     (stream-take 10 ln2-stream)
+     (stream-take 10 (euler-transform ln2-stream))
+     (stream-take 10 (euler-transform (euler-transform ln2-stream))))
 #+end_src
 
-Approximation of $\ln 2$ to 9 decimals: 0,693147181
+Approximation of $\ln 2$ to 9 decimals: 0.693147181
 
 #+RESULTS:
 | 1.000000000 | 0.700000000 | 0.693277311 |
@@ -432,7 +432,7 @@ f(m, n) = 2*f(m-1, n-1) + 1
 
 
 * Exercise 3.67
-Modify the pairs procedure so that (pairs integers integers) will produce the stream of all pairs of integers $(i, j)$ (without the condition $i ≤ j$).  Hint: You will need to mix in an additional stream.
+Modify the pairs procedure so that (pairs integers integers) will produce the stream of all pairs of integers $(i, j)$ (without the condition $i \leq j$).  Hint: You will need to mix in an additional stream.
 
 ** Solution
 #+begin_src scheme
@@ -469,7 +469,7 @@ Does this work?  Consider what happens if we evaluate (pairs integers integers) 
 
 
 ** Solution
-This would produce an infinite loop since pairs is defined in terms if itself but there are no delayed evaluation.
+This would produce an infinite loop since pairs is defined in terms of itself but there are no delayed evaluation.
 
 
 * Exercise 3.69
@@ -478,13 +478,6 @@ Write a procedure triples that takes three infinite streams, $S$, $T$, and $U$, 
 ** Solution
 #+begin_src scheme
 ;; previous definitions
-(define ones (cons-stream 1 ones))
-
-(define (add-streams s1 s2)
-  (stream-map + s1 s2))
-
-(define integers (cons-stream 1 (add-streams ones integers)))
-
 (define (interleave s1 s2)
   (if (stream-null? s1)
       s2
@@ -525,5 +518,112 @@ Write a procedure triples that takes three infinite streams, $S$, $T$, and $U$, 
 
 (test-equal
     '((3 4 5) (6 8 10) (5 12 13) (9 12 15) (8 15 17))
-  (stream-take pythagorean-triplets 5))
+  (stream-take 5 pythagorean-triplets))
+#+end_src
+
+
+* Exercise 3.70
+It would be nice to be able to generate streams in which the pairs appear in some useful order, rather than in the order that results from an ad hoc interleaving process.  We can use a technique similar to the merge procedure of Exercise 3.56, if we define a way to say that one pair of integers is "less than" another.  One way to do this is to define a "weighting function" $W(i, j)$ and stipulate that $(i_1, j_1)$ is less than $(i_2, j_2)$ if $W(i_1, j_1) < W(i_2, j_2)$.  Write a procedure merge-weighted that is like merge, except that merge-weighted takes an additional argument weight, which is a procedure that computes the weight of a pair, and is used to determine the order in which elements should appear in the resulting merged stream.  Using this, generalize pairs to a procedure weighted-pairs that takes two streams, together with a procedure that computes a weighting function, and generates the stream of pairs, ordered according to weight.  Use your procedure to generate
+
+1. the stream of all pairs of positive integers $(i, j)$ with $i \leq j$ ordered according to the sum $i + j$,
+
+2. the stream of all pairs of positive integers $(i, j)$ with $i \leq j$, where neither $i$ nor $j$ is divisible by 2, 3, or 5, and the pairs are ordered according to the sum $2_i + 3_j + 5_{ij}$.
+
+** Solution
+#+begin_src scheme
+(define (merge-weighted w s1 s2)
+  (cond ((stream-null? s1) s2)
+        ((stream-null? s2) s1)
+        (else
+         (let ((s1car (stream-car s1))
+               (s2car (stream-car s2)))
+           (cond ((<= (w s1car) (w s2car))
+                  (cons-stream
+                   s1car
+                   (merge-weighted
+                    w
+                    (stream-cdr s1)
+                    s2)))
+                 ((> (w s1car) (w s2car))
+                  (cons-stream
+                   s2car
+                   (merge-weighted
+                    w
+                    s1
+                    (stream-cdr s2)))))))))
+
+(define (weighted-pairs w s t)
+  (cons-stream
+   (list (stream-car s) (stream-car t))
+   (merge-weighted
+    w
+    (stream-map
+     (lambda (x) (list (stream-car s) x))
+     (stream-cdr t))
+    (weighted-pairs
+     w
+     (stream-cdr s)
+     (stream-cdr t)))))
+
+(define (integer-pairs-weighted-by w)
+  (weighted-pairs w integers integers))
+
+;; 1.
+(test-equal
+    '((1 1) (1 2) (1 3) (2 2) (1 4) (2 3))
+  (stream-take
+   6
+   (integer-pairs-weighted-by
+    (lambda (p)
+      (+ (car p) (cadr p))))))
+
+;; 2. quick and dirty approach
+(test-equal
+    '((1 1) (1 7) (1 11) (1 13) (1 17) (1 19) (1 23) (1 29) (1 31) (7 7))
+  (stream-take
+   10
+   (stream-filter
+    (lambda (p)
+      (and (not (divides? 5 (car p)))
+           (not (divides? 5 (cadr p)))))
+    (stream-filter
+     (lambda (p)
+       (and (not (divides? 3 (car p)))
+            (not (divides? 3 (cadr p)))))
+     (stream-filter
+      (lambda (p)
+        (and (not (divides? 2 (car p)))
+             (not (divides? 2 (cadr p)))))
+      (integer-pairs-weighted-by
+       (lambda (p)
+         (let ((i (car p))
+               (j (cadr p)))
+           (+ (* 2 i) (* 3 j) (* 5 i j))))))))))
+
+;; 2. basic operations approach
+(define (partial f c)
+  (lambda (x)
+    (f c x)))
+
+(define (weigth-of-pair p)
+  (let ((i (car p))
+               (j (cadr p)))
+           (+ (* 2 i) (* 3 j) (* 5 i j))))
+
+(define (divides-none divisor l)
+  (cond ((null? l) #t)
+        ((divides? divisor (car l)) #f)
+        (else (divides-none divisor (cdr l)))))
+
+(define specified-stream
+  (fold-left
+   (lambda (stream pred) (stream-filter pred stream))
+   (integer-pairs-weighted-by weigth-of-pair)
+   (list (partial divides-none 2)
+         (partial divides-none 3)
+         (partial divides-none 5))))
+
+(test-equal
+    '((1 1) (1 7) (1 11) (1 13) (1 17) (1 19) (1 23) (1 29) (1 31) (7 7))
+  (stream-take 10 specified-stream))
 #+end_src
